Editing the cover

--- a/Sections/00_Title_Saclay.tex
+++ b/Sections/00_Title_Saclay.tex
@@ -2,7 +2,7 @@
 
 \newgeometry{left=6cm,bottom=1cm, top=1cm, right=1cm}
 
-\tikz[remember picture,overlay] \node[opacity=1,inner sep=0pt] at (-13mm,-135mm){\includegraphics{logo/Bandeau_UPaS.pdf}};
+\tikz[remember picture,overlay] \node[opacity=1,inner sep=0pt] at (-13mm,-135mm){\includegraphics{logo/Frame-ups.pdf}};
 
 % fonte sans empattement pour la page de titre
 \fontfamily{fvs}\fontseries{m}\selectfont
@@ -15,8 +15,8 @@
 \color{white}
 
 \begin{picture}(0,0)
-
-\put(-110,-743){\rotatebox{90}{NNT: }}
+\put(-152,-743){\rotatebox{90}{\Large \textsc{THESE DE DOCTORAT}}} \\
+\put(-120,-743){\rotatebox{90}{NNT : 2020UPASA001}}
 \end{picture}
 
 % \vspace{-12mm}
@@ -38,21 +38,23 @@ Catalytic properties at the nanoscale probed by surface x-ray diffraction and co
 \Large{\textit{Propriétés catalytiques à l'échelle nanométrique sondées par diffraction des rayons X de surface et imagerie de diffraction cohérente}}
 %*****************************************************
 
-\vspace{1.5cm}
+\fontsize{8}{12}\selectfont
+
+\vspace{2cm}
+
 \normalsize
 \textbf{Thèse de doctorat de l'Université Paris-Saclay}
 
-\vspace{15mm}
+\vspace{6mm}
 
 École doctorale n$^{\circ}$ 564, physique en Île-de-France (PIF)\\
 \small Spécialité de doctorat: Physique\\
-\footnotesize Graduate School: Physique\\
-\footnotesize Unités de recherche: Synchrotron Soleil (Université Paris-Saclay)\\
-\footnotesize et CEA Grenoble
-% \footnotesize Référent: : COATI Alessandro\\
-\vspace{15mm}
+\small Graduate School: Physique.\\
+\vspace{6mm}
 
-\textbf{Thèse présentée et soutenue à Paris-Saclay,\\ le 12/01/2024, par}\\
+\footnotesize Thèse préparée dans les unités de recherche \textbf{Synchrotron Soleil (Université Paris-Saclay) et CEA Grenoble}, sous la direction de \textbf{Alessandro COATI}, Dr., la co-direction de \textbf{Marie-Ingrid RICHARD}, Directrice de recherche, le co-encadrement de \textbf{Andrea RESTA}, Dr.\\
+\vspace{15mm}
+\textbf{Thèse présentée et soutenue à Paris-Saclay, le 12/01/2024, par}\\
 \bigskip
 \Large {\color{Prune} \textbf{David SIMONNE}}
 
@@ -62,36 +64,23 @@ Catalytic properties at the nanoscale probed by surface x-ray diffraction and co
 
 \bigskip
 \flushleft
+\small {\color{Prune} \textbf{Composition du jury}}\\
+{\color{Prune} \scriptsize {Membres du jury avec voix délibérative}} \\
+\vspace{2mm}
 \scriptsize
-\begin{tabular}{|p{7cm}l}
+\begin{tabular}{|p{10cm}l}
 \arrayrulecolor{Prune}
-{\footnotesize \textbf{Composition du jury}}\\
-& \\
-\textbf{Thomas Cornélius} & Rapporteur \\
-Directeur de recherche, IM2NP, Marseille & \\
+\textbf{Sylvain Ravy} & Président \\
+Directeur de recherche, LPS, Orsay & \\
 \textbf{Andreas Stierle} & Rapporteur \\
 Professor, University of Hamburg / DESY, Hamburg & \\
+\textbf{Thomas Cornélius} & Rapporteur \\
+Directeur de recherche, IM2NP, Marseille & \\
 \textbf{Gerardina Carbone} & Examinatrice \\
 Researcher, Lund University, Lund & \\
 \textbf{Virginie Chamard} & Examinatrice \\
 Directrice de recherche, Institut Fresnel, Marseille & \\
-\textbf{Sylvain Ravy} & Examinateur \\
-Directeur de recherche, LPS, Orsay & \\
-
-\end{tabular} 
-
-\medskip
-\begin{tabular}{|p{7cm}l}
-\arrayrulecolor{Prune}
-{\footnotesize \textbf{Direction de la thèse}}\\
-& \\
-\textbf{Alessandro Coati} & Directeur \\
-Dr., Synchrotron SOLEIL & \\
-\textbf{Andrea Resta} & Co-directeur \\
-Dr., Synchrotron SOLEIL & \\
-\textbf{Marie-Ingrid Richard} & Co-directrice \\
-Directrice de recherche, CEA Grenoble & \\
-
-\end{tabular} 
+\end{tabular}
+\vspace{6mm}
 
 \end{titlepage}
