Correct error in standard deviation for Coherence length

--- a/Sections/2_Theory_Models/SixS.tex
+++ b/Sections/2_Theory_Models/SixS.tex
@@ -48,7 +48,7 @@ SixS (Surfaces Interfaces X-ray Scattering) is a wide-energy range beamline dedi
 \end{figure}
 
 The beamline operates with a $U_{20}$ undulator situated before the front-end (shutter), which delivers a horizontally polarised beam.
-The beam is characterised by its horizontal and vertical standard deviations, respectively $\sigma_H = \qty{913.7}{\um}$ and $\sigma_V = \qty{19.1}{\um}$, and by its horizontal and vertical divergences, respectively $\Delta\theta_H = \qty{14.5}{\micro\radian}$ and $\Delta\theta_V = \qty{4.61}{\micro\radian}$.
+The beam is characterised by its horizontal and vertical full width at half maximum, respectively $FWHM_H = \qty{913.7}{\um}$ and $FWHM_V = \qty{19.1}{\um}$, and by its horizontal and vertical divergences, respectively $\Delta\theta_H = \qty{14.5}{\micro\radian}$ and $\Delta\theta_V = \qty{4.61}{\micro\radian}$.
 
 A diaphragm is placed after the undulator to cut any parasitic signal from the source.
 A double crystal monochromator (DCM) of silicium (111) allows the selection of a monochromatic beam of thin bandwidth $\Delta \lambda$ in the range of \qtyrange{4}{20}{\keV}, after receiving the white beam.
