Move 4eme to 2eme de couverture

--- a/Sections/99_2eme_couverture.tex
+++ b/Sections/99_2eme_couverture.tex
@@ -1,8 +1,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\Ifthispageodd{\newpage\thispagestyle{empty}\null\newpage}{}
+% \Ifthispageodd{\newpage\thispagestyle{empty}\null\newpage}{}
 \thispagestyle{empty}
-\newgeometry{top=1.5cm, bottom=1.25cm, left=2cm, right=2cm}
-\fontfamily{rm}\selectfont
+% \newgeometry{top=1.5cm, bottom=1.25cm, left=2cm, right=2cm}
+% \fontfamily{rm}\selectfont
 
 \lhead{}
 \rhead{}
@@ -14,10 +14,10 @@
 %*****************************************************
 %***** LOGO DE L'ED À CHANGER IMPÉRATIVEMENT *********
 %*****************************************************
-\includegraphics[height=2.4cm]{logo/logo_edpif_4eme.png}
+\includegraphics[height=2.4cm]{logo/logo_usp_PIF.png}
 \vspace{0.5cm}
 %*****************************************************
-\fontfamily{cmss}\fontseries{m}\selectfont
+%\fontfamily{cmss}\fontseries{m}\selectfont
 
 \small
 
@@ -25,7 +25,7 @@
 
 \textbf{Titre:} Propriétés catalytiques à l’échelle nanométrique sondées par diffraction des rayons X de surface et imagerie de diffraction cohérente
 
-\noindent \textbf{Mots clés:} Diffraction, Catalyse, Surface, Structure, Déformation
+\noindent \textbf{Mots clés:} Diffraction de rayons X, Catalyse hétérogène, Surface, Structure cristalline, Déformation, Oxydation de l'ammoniac
 
 \vspace{-.5cm}
 \begin{multicols}{2}
@@ -46,11 +46,33 @@ Finalement, l'évolution de la structure d'ensemble et de monocristaux est compa
 
 \end{mdframed}
 
+\newpage
+\thispagestyle{empty}
+% \newgeometry{top=1.5cm, bottom=1.25cm, left=2cm, right=2cm}
+% \fontfamily{rm}\selectfont
+
+\lhead{}
+\rhead{}
+\rfoot{}
+\cfoot{}
+\lfoot{}
+
+\noindent
+%*****************************************************
+%***** LOGO DE L'ED À CHANGER IMPÉRATIVEMENT *********
+%*****************************************************
+\includegraphics[height=2.4cm]{logo/logo_usp_PIF.png}
+\vspace{0.5cm}
+%*****************************************************
+%\fontfamily{cmss}\fontseries{m}\selectfont
+
+\small
+
 \begin{mdframed}[linecolor=Prune,linewidth=1]
 
 \textbf{Title:} Catalytic properties at the nanoscale probed by surface X-ray diffraction and coherent diffraction imaging
 
-\noindent \textbf{Keywords:} Diffraction, Catalysis, Surface, Structure, Strain
+\noindent \textbf{Keywords:} X-ray diffraction, Heterogeneous catalysis, Surface, Crystal structure, Strain, Ammonia oxidation
 
 \begin{multicols}{2}
 \noindent \textbf{Abstract:}
@@ -69,12 +91,10 @@ Finally, the evolution of the nanoparticle ensemble structure and of single crys
 \end{multicols}
 \end{mdframed}
 
+\normalsize
+
 %************************************
 \vspace{\fill} % ALIGNER EN BAS DE PAGE
 %************************************
 
-\noindent
-\color{Prune} \footnotesize Maison du doctorat, Université Paris-Saclay\\
-2$^{\mathrm{e}}$ étage, aile ouest, École normale supérieure Paris-Saclay\\
-4 avenue des Sciencs\\
-91190 Gif-sur-Yvette, France
+\newpage\thispagestyle{empty}\null\newpage
