Change optical setup figure to pdf

--- a/Sections/2_Theory_Models/SixS.tex
+++ b/Sections/2_Theory_Models/SixS.tex
@@ -113,16 +113,15 @@ The secondary slits are closed to \qty{100}{\um} vertically and horizontally, ac
 So called \textit{coherence} slits are placed just before the beam stop to select a homogeneous portion of the beam that impinges on focusing refractive lenses called Fresnel zone plates (FZP), designed to work at an energy of \qty{8.5}{\keV}.
 The use of Fresnel zone plates (that preserve the coherent wavefront) together with coherence slits has been proven to increase the coherent flux impinging on the sample \parencite{Schroer2008, Diaz2009, Mastropietro2011}.
 
-An order-sorting aperture (OSA) and a beamstop (BS) block the direct beam and the higher diffraction orders from the FZP (fig. \ref{fig:OpticalSetup}).
+An order-sorting aperture (OSA) and a beamstop block the direct beam and the higher diffraction orders from the FZP (fig. \ref{fig:OpticalSetup}).
 Since the coherence slits also have the counter effect of decreasing the total photon flux on the sample, their width is subject to a compromise to increase the coherent flux on the sample.
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[width=0.8\textwidth]{/home/david/Documents/PhD/Figures/sixs/OpticalSetup.png}
+    \includegraphics[width=0.8\textwidth]{/home/david/Documents/PhD/Figures/sixs/OpticalSetup.pdf}
     \caption{
     	Focusing optics used for Bragg coherent diffraction imaging at the MED end-station, increasing the coherent flux on the sample.
         $f$ stands for focal distance and $\lambda$ for the wavelength of the incoming beam.
-        BS, FZP and OSA stand for beamstop, Fresnel zone plates and order-selecting aperture.
     }
     \label{fig:OpticalSetup}
 \end{figure}
