--- a/Sections/2_Theory_Models/SXRD.tex
+++ b/Sections/2_Theory_Models/SXRD.tex
@@ -87,7 +87,7 @@ This expression is only valid within the kinematical approach to diffraction.
     Simulated intensity of a [2, 0, L] crystal truncation rod perpendicular for a (100)-oriented Pt single crystal, computed with ROD \parencite{Vlieg2000}.
     (a) The intensity between the Bragg peaks decreases with increasing roughness.
     (b) $\delta z$ corresponds to the displacement (or surface relaxation) of the last atomic layer perpendicular to the surface.
-    Large surface relaxations induce an asymmetry in the CTR shape and a shift in the position of the minimum between Bragg peaks.
+    Large surface relaxations induce an asymmetry in the CTR shape, and a shift in the position of the minimum between Bragg peaks.
     }
     \label{fig:CTRSimulation}
 \end{figure}
@@ -172,7 +172,7 @@ The integrated intensity of a Bragg peak in photons/second, coming from a perfec
 
 \begin{gather}
     \label{eq:ScatteredIntensity}
-    I_{sc} = \Phi r_0^2 P |F_{crystal}(\vec{q})|^2 \frac{V_s}{V_c} \times L(\lambda, \theta)
+    I_{sc}(\vec{q}) = \Phi r_0^2 P |F_{crystal}(\vec{q})|^2 \frac{V_s}{V_c} \times L(\lambda, \theta)
     % L(\lambda, \theta) = \frac{\lambda^3}{v_c}\frac{1}{sin(2\theta)}
 \end{gather}
 $\Phi$ is the incoming photon flux, $P$ the polarisation factor, $F_{crystal}(\vec{q})$ the structure factor of the crystal, $V_s$ is the scattering volume and $V_c$ the volume of the unit cell.
