--- a/Sections/2_Theory_Models/Introduction.tex
+++ b/Sections/2_Theory_Models/Introduction.tex
@@ -32,7 +32,7 @@ X-ray absorption together with the photoelectric effect explained by Einstein in
 \begin{figure}[!htb]
     \centering
     \includegraphics[height=0.28\textwidth]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/gwaihir/dp_pr.png}
-    \includegraphics[height=0.28\textwidth]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/sxrd_data/Pt100/maps/Map_hkl_surf_or_2227-2283_not_patched.png}
+    \includegraphics[height=0.28\textwidth]{/home/david/Documents/PhDScripts/SixS_2022_01_SXRD_Pt100/figures/Map_hkl_surf_or_2227-2283_patched.pdf}
     \includegraphics[height=0.28\textwidth]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/xps_data/transition_xps.png}
     \caption{
     Left: 2D diffraction pattern collected using BCDI at the SixS beamline (SOLEIL synchrotron)
