Forgot NO2 in NOx

--- a/Sections/1_Introduction/AmmoniaOxidation.tex
+++ b/Sections/1_Introduction/AmmoniaOxidation.tex
@@ -7,7 +7,7 @@ Notable advancements in catalysis have led to the production of plastics, pharma
     \centering
     \includegraphics[width=\textwidth]{/home/david/Documents/PhD/Figures/ammonia/ParisNO2English.png}
     \caption{
-        $NO_2$ levels in Paris near the main traffic roads remained on average twice superior to the annual limit of \qty{40}{\ug \per \m^3} \parencite{AirParis} between 2012 and 2018, despite a global decrease since 2012.
+        \ce{NO2} levels in Paris near the main traffic roads remained on average twice superior to the annual limit of \qty{40}{\ug \per \m^3} \parencite{AirParis} between 2012 and 2018, despite a global decrease since 2012.
     }
     \label{fig:NO2Paris}
 \end{figure}
@@ -44,7 +44,7 @@ Today, about \qty{50}{\percent} of the world population relies on nitrogen-based
 \begin{figure}[!htb]
 \centering
     \begin{tikzpicture}
-        \node (image) [anchor=south west, inner sep=0pt] {\includegraphics[width=0.95\textwidth]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/worldindata/world-population-with-and-without-fertilizer.png}};
+        \node (image) [anchor=south west, inner sep=0pt] {\includegraphics[width=0.95\textwidth]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/WorldInData/world-population-with-and-without-fertilizer.png}};
         \begin{scope}[x={(image.south east)}, y={(image.north west)}]
             \node [text width=4cm,align=right] at (0.18, 0.7) (OP) {\textcolor{Ostwald}{Ostwald} process\\(1902)\\ \textrightarrow Nobel prize\\(1909)};
             \draw [-latex, ultra thick, Ostwald] (0.10,0.75) to (0.10,0.12);
@@ -175,8 +175,7 @@ The roughening of the catalyst surface can double the active surface area \paren
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhD/Figures/sample/EtchedGauze.png}
-    \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhD/Figures/sample/ReconstructedGauze.png}
+    \includegraphics[width=\textwidth]{/home/david/Documents/PhD/Figures/sample/EtchedGauzeAndReconstructedGauze.pdf}
     \caption{
     SEM images of Pt-Rh reconstructed gauzes with cauliflower patterns after use in industry, taken from Bergene et al. \parencite*{Bergene1996}.
     The horizontal bar is \qty{0.1}{\mm} wide.
@@ -256,7 +255,7 @@ Kinetic studies on poly-crystalline Pt up to \qty{10}{\bar} but at temperatures 
     \includegraphics[width=\textwidth]{/home/david/Documents/PhD/Figures/ammonia/ReactionMechanism.png}
     \caption{
     Example of \ce{NH_3} stripping process by adsorbed \ce{O}, taken from Imbihl et al. \parencite*{Imbihl2007}.
-    From grey to black Coors are lower layer of Pt(111), hydrogen atoms, upper layer of Pt(111), oxygen atoms, and nitrogen atoms.
+    From grey to black colours are lower layer of Pt(111), hydrogen atoms, upper layer of Pt(111), oxygen atoms, and nitrogen atoms.
     }
     \label{fig:ReactionMechanism}
 \end{figure}
@@ -320,7 +319,7 @@ Nitric acid can also be linked to acid rains \parencite{Galloway1981}.
 Moreover, nitrogen-based fertilisers and other human activities can lead to nitrogen runoff into water bodies, contributing to eutrophication and causing harm to aquatic ecosystems (tab. \ref{tab:NitrogenGases}).
 Approximately half of the production of ammonia is lost to the environment \parencite{Erisman2007}.
 
-Finally, the important effect of nitrogen oxides (\ce{NO_x}, \textit{i.e.} \ce{NO} and \ce{N_2O}) on the environment has brought forward the necessity to control their emissions, especially from the exhaust of diesel engines that are responsible for \qty{65}{\percent} of their emissions.
+Finally, the important effect of nitrogen oxides (\ce{NO_x}, \textit{i.e.} \ce{NO}, \ce{NO2}, and \ce{N_2O}) on the environment has brought forward the necessity to control their emissions, especially from the exhaust of diesel engines that are responsible for \qty{65}{\percent} of their emissions.
 The selective catalytic reaction (SCR) using urea or ammonia as reductant (tab. \ref{tab:NitrogenGases}) has proven to be effective and to reach \qty{95}{\percent} efficiency \parencite{MitsubishiSCR}.
 However, there can be a subsequent problem of unreacted ammonia \textit{slipping} from the reaction, which is also an important subject of study \parencite{Thermofischer}.
 
